<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#036E95"
    tools:context=".view.CulinaryRecipeDetailsActivity"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#036E95">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="right"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/byUserText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="right"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_gravity="right"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        app:cornerRadius="40dp"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:iconGravity="textTop"
        app:iconTint="#1F98C4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_below="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:padding="20dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="40dp">

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="left"
            android:textColor="#213B55"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/description_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="160dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/preparationTimeText"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textColor="#697D90" />

            <TextView
                android:id="@+id/difficultyLevelText"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textColor="#697D90" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="160dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/yieldText"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textColor="#697D90" />

            <TextView
                android:id="@+id/totalCaloriesText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textColor="#697D90" />
        </LinearLayout>

        <TextView
            android:id="@+id/ingredientsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="280dp"
            android:layout_marginBottom="20dp"
            android:gravity="left"
            android:textColor="#213B55"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/ingredients_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="310dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewIngredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/preparationModeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="460dp"
            android:layout_marginBottom="20dp"
            android:gravity="left"
            android:textColor="#213B55"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/preparationMode_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="490dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPreparationMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
</ScrollView>
